[project]
name = "dnarna"
version = "0.2.0"
description = "An AI model for predicting DNA-RNA binding."
readme = "README.md"
authors = [{ name = "YANG Zijie", email = "yangzijie@westlake.edu.cn" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "biopython>=1.84",
    "einops>=0.8.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "rna-fm>=0.1.1",
    "numba>=0.62.1",
    "matplotlib>=3.10.7",
    "fastparquet>=2024.11.0",
    "streamlit>=1.52.1",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = [".DS_Store"]
wheel-exclude = [".DS_Store"]

[dependency-groups]
dev = ["pytest>=8.4.1"]
